test/nginxinc-kubernetes-ingress/resources.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-test-b
  namespace: default
spec:
  ingressClassName: nginxinc
  rules:
  - host: myserviceb.foo.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
---
apiVersion: k8s.nginx.org/v1
kind: VirtualServer
metadata:
  name: virtualserver-nginx-test-a
spec:
  host: virtualservera.foo.org
  upstreams:
  - name: nginx-test-a
    service: backend
    port: 80
